--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="img/Combo.png" alt="com um combo mensal para ter melhor experiencia no jogo" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">compre nosso combo de produtos por 150,90*</a>
+            <h1 class="container__titulo">Com o Combo voce tera nosso champoo nosso condicionado.</h1>
+            <img src="img/Combo.png" alt="e ira concorer a uma promoção unica na proxima compra de 70 por cento de desconto" class="container__imagem">
+            <a href="www.alura.com.br" class="container__botao">compre nosso combo de produtos por 150,87*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">compre so o shampoo 35,90</a>
             <p class="container__aviso">*O preço pode variar caso a compra seja feita pela internet.</p>
         </div>
     </section>
 
     <section class="container secundario">
-        <img src="img/porduto.avif" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="shampooooo.webp" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">compre mosso produto</h2>
             <p class="descricao__texto">Aproveite que nosso shampoo solta mais no cabelo, condicionador deixa mais brilhoso, creme de pentear deixa o cabelo macio e cheiroso</p>
